fix: dockerfile network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,3 +87,7 @@ services:
           brokers: ["kafka:29092"]
     depends_on:
       - "kafka"
+
+networks:
+  orchestrator-saga:
+    driver: bridge
