feat: build applications with docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,6 +88,86 @@ services:
     depends_on:
       - "kafka"
 
+  order-service:
+    container_name: order-service
+    build: ./order-service
+    networks:
+      - orchestrator-saga
+    ports:
+      - "3000:3000"
+    depends_on:
+      - order-db
+      - kafka
+    environment:
+      - KAFKA_BROKER=kafka:29092
+      - MONGO_URI=mongodb://root:password@order-db:27017
+
+  orchestrator-service:
+    container_name: orchestrator-service
+    build: ./orchestrator-service
+    networks:
+      - orchestrator-saga
+    depends_on:
+      - kafka
+    environment:
+      - KAFKA_BROKER=kafka:29092
+    ports:
+      - "8080:8080"
+    
+  product-validation-service:
+    container_name: product-validation-service
+    build: ./product-validation-service
+    networks:
+      - orchestrator-saga
+    depends_on:
+      - product-db
+      - kafka
+    environment:
+      - KAFKA_BROKER=kafka:29092
+      - DB_NAME=product-db
+      - DB_HOST=product-db
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+    ports:
+      - "8090:8090"
+  
+  payment-service:
+    container_name: payment-service
+    build: ./payment-service
+    networks:
+      - orchestrator-saga
+    depends_on:
+      - payment-db
+      - kafka
+    environment:
+      - KAFKA_BROKER=kafka:29092
+      - DB_NAME=payment-db
+      - DB_HOST=payment-db
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+    ports:
+      - "8091:8091"
+
+  inventory-service:
+    container_name: inventory-service
+    build: ./inventory-service
+    networks:
+      - orchestrator-saga
+    depends_on:
+      - inventory-db
+      - kafka
+    environment:
+      - KAFKA_BROKER=kafka:29092
+      - DB_NAME=inventory-db
+      - DB_HOST=inventory-db
+      - DB_PORT=5432
+      - DB_USER=postgres
+      - DB_PASSWORD=postgres
+    ports:
+      - "8092:8092"
+
 networks:
   orchestrator-saga:
     driver: bridge
