hotfix: inventory service fix bugs

--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -1,7 +1,6 @@
 server:
   port: 8092
 
-
 spring:
   kafka:
     bootstrap-servers: ${KAFKA_BROKER:localhost:9092}
@@ -10,9 +9,8 @@ spring:
       inventory-success: inventory-success
       inventory-fail: inventory-fail
     consumer:
-      group-id: inventory-group
+      group-id: payment-group
       auto-offset-reset: latest
-
 
   datasource:
     driver-class-name: org.postgresql.Driver
@@ -20,15 +18,12 @@ spring:
     username: ${DB_USER:postgres}
     password: ${DB_PASSWORD:postgres}
 
-
   jpa:
     hibernate:
       ddl-auto: create-drop
-    show-sql: true
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-
 
 logging:
   level:
